# MovieBalancer

./: Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yaml  main.py  nginx.conf  pyproject.toml
alembic/: env.py
alembic/versions/: b5c850e6ecf9_create_tables.py
api/: __init__.py  config.py  redirect.py
core/: env_config.py
db/: database.py  models.py
repository/: DAL.py
schemas/: schemas.py
service/: config.py
